# simple-fs

./: Cargo.toml
src/: main.rs
