[package]
name = "simple-fs"
version = "0.1.0"
authors = ["vpandya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "fs"] }
warp = "0.2.3"
futures = { version = "=0.3.5", default-features = false }
bytes = "0.5.6"
